feat/metrics, connection, ui enhacements